--- a/css/screen.css
+++ b/css/screen.css
@@ -29,6 +29,8 @@ html {
     /* font-family: "Inter Web", "Helvetica Neue", Helvetica, arial, sans-serif; */
     color: #5C6366;
     padding: 48px 24px 24px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -74,7 +76,7 @@ h3{
 }
 
 h1 {
-    font-family: 'Playfair Display', serif;
+    font-family: "Playfair Display", serif;
     font-size: 36px;
     font-weight: normal;
     line-height: 40px;
