--- a/css/screen.css
+++ b/css/screen.css
@@ -78,7 +78,6 @@ h3{
 h1 {
     font-family: "Playfair Display", serif;
     font-size: 36px;
-    font-weight: normal;
     line-height: 40px;
     margin: 0 0 24px;
 }
@@ -87,6 +86,10 @@ h2 {
     font-size: 23px;
     line-height: 32px;
     margin: 0 0 24px;
+}
+
+* + h2{ /*Adjacent sibling selector + universal selector, als de h2 achter iets komt*/
+    margin-top: 48px;
 }
 
 h3 {
