--- a/css/screen.css
+++ b/css/screen.css
@@ -28,14 +28,8 @@ html {
     font-family: droid-serif, serif;
     /* font-family: "Inter Web", "Helvetica Neue", Helvetica, arial, sans-serif; */
     color: #5C6366;
-    padding: 48px 24px 24px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-    max-width: 42em;
-    margin: 0 auto;
 }
 
 /*
@@ -202,6 +196,73 @@ a:focus {
     line-height: 24px;
 }
 
+@media (min-width: 992px){
+    .c-author{
+        /* display: block; kan ook */
+        flex-direction: column;
+        align-items: start;
+    }
+}
+
+/* 
+    Components: Article 
+*/
+
+.c-article__header,
+.c-article__body{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.c-article__header{
+    padding: 24px 24px 0;
+}
+
+.c-article__body{
+    padding: 0 24px;
+}
+
+@media (min-width: 768px){
+    .c-article__header{
+        padding: 48px 48px 24px;
+    }
+    
+    .c-article__body{
+        padding: 24px 48px;
+    }
+
+    .c-article__author{
+        margin-bottom: 48px;
+    }
+}
+
+@media (min-width: 992px){
+    .c-article__body{
+        display: flex;
+        gap: 24px;
+    }
+
+    .c-article__author{
+        width: 25%;
+    }
+
+    .c-article__content{
+        width: 75%;
+    }
+}
+
+/* 
+    Utility: max-width 
+*/
+
+.u-max-width-xs{
+    max-width: 30em;
+}
+
+.u-max-width-sm{
+    max-width: 36em;
+}
+
 /* Small devices (landscape phones, 576px and up) */
 
 @media (min-width: 576px) {}
@@ -209,9 +270,6 @@ a:focus {
 /* Medium devices (tablets, 768px and up) */
 
 @media (min-width: 768px) {
-    html {
-        padding: 48px 48px 24px;
-    }
     h1 {
         font-size: 58px;
         line-height: 64px;
